package com.mef.parkauto.entity;
public enum CompagnieAssurance {
    AXA, RMA, WAFA, SAHAM, ATLANTA, AUTRE
}
