package com.mef.parkauto.entity;
public enum NatureDepense {
    CARBURANT,
    LUBRIFIANTS,
    ASSURANCE,
    ENTRETIEN,
    REPARATION,
    PIECES_RECHANGE,
    PNEUS,
    VISITE_TECHNIQUE,
    VISITES,
    TAXES,
    LOCATION,
    AUTRES
}
