package com.mef.parkauto.entity;

public enum StatutSinistre {
    DECLARE,
    TRANSMIS,
    EN_COURS_D_EXPERTISE,
    EN_EXPERTISE,
    ACCEPTE,
    REJETE,
    INDEMNISE,
    CLOTURE,
    CLOS
}
